# nhk-radio-music-assistant

./: .gitignore  README.md  deploy.sh  pyproject.toml  requirements.txt
nhk_radio_ma/: __init__.py  _stub.py  const.py  manifest.json
patches/: apply_ha_media_player_patch.py
server/: Dockerfile  docker-compose.yml  entrypoint.sh
tests/: conftest.py  test_provider.py
